--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-stripe-client": "^0.0.3",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3"
   },
