--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-stripe-client": "^0.0.3",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
