--- a/app.json
+++ b/app.json
@@ -1,11 +1,24 @@
 {
   "expo": {
     "name": "muy-saludable-app",
-    "slug": "muy-saludable-app",
+    "slug": "muysaludableapp-d8f5kruwje72eutfoyah3",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./local/assets/notification-icon.png",
+          "color": "#082849",
+          "sounds": [
+            "./local/assets/notification-sound.wav",
+            "./local/assets/notification-sound-other.wav"
+          ]
+        }
+      ]
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -25,6 +38,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7399c1e6-e071-4444-bf9a-36c2577cdbbb"
+      }
+    },
+    "owner": "salvador_lopez"
   }
 }
