--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -20,7 +21,15 @@
     "@types/react-native-swiper": "^1.5.12",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-av": "^13.10.6",
+    "expo-constants": "~14.4.2",
+    "expo-device": "^5.9.4",
+    "expo-file-system": "^15.4.5",
     "expo-font": "~11.4.0",
+    "expo-notifications": "^0.20.1",
+    "expo-permissions": "^14.4.0",
+    "expo-print": "^12.8.1",
+    "expo-sharing": "^11.10.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
@@ -32,6 +41,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-stripe-client": "^0.0.3",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
