--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.22.3",
-    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -21,15 +21,15 @@
     "@types/react-native-swiper": "^1.5.12",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
-    "expo-av": "^13.10.6",
+    "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
-    "expo-device": "^5.9.4",
+    "expo-device": "~5.4.0",
     "expo-file-system": "^15.4.5",
     "expo-font": "~11.4.0",
     "expo-notifications": "^0.20.1",
-    "expo-permissions": "^14.4.0",
-    "expo-print": "^12.8.1",
-    "expo-sharing": "^11.10.0",
+    "expo-permissions": "~14.2.1",
+    "expo-print": "~12.4.2",
+    "expo-sharing": "~11.5.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
@@ -45,7 +45,8 @@
     "react-native-stripe-client": "^0.0.3",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
