--- a/app.json
+++ b/app.json
@@ -27,7 +27,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.muysaludable.app"
+      "bundleIdentifier": "com.muysaludable.app",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
