--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "muy-saludable-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -18,10 +17,12 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-swiper": "^1.5.12",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
     "expo-file-system": "^15.4.5",
@@ -30,6 +31,7 @@
     "expo-permissions": "~14.2.1",
     "expo-print": "~12.4.2",
     "expo-sharing": "~11.5.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
@@ -41,12 +43,12 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-stripe-client": "^0.0.3",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
-    "zustand": "^4.5.2",
-    "expo-splash-screen": "~0.20.5"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
