--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-stripe-client": "^0.0.3",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-asset": "~8.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
